# adventofcode2024

./: pyproject.toml
day01/: part1.py  part2.py
day02/: part1.py  part2.py
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: part1.py  part2.py
day06/: part1.py  part2.py
day07/: part1.py  part2.py
