[tool.poetry]
name = "adventofcode2024"
version = "0.1.0"
description = ""
authors = ["Fabian Iffländer <fabian.ifflaender@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
